--- a/templates/procurement_list.html
+++ b/templates/procurement_list.html
@@ -44,6 +44,9 @@
                             {% endif %}
                         </td>
                         <td class="text-end">
+                            <a href="/requisition-details/{{ req.id }}" class="btn btn-outline-secondary btn-sm" title="View Details">
+                                <i class="bi bi-eye-fill"></i>
+                            </a>
                             <a href="/procurement/material-requisition/{{ req.id }}" class="btn btn-primary btn-sm">
                                 <i class="bi bi-pencil-square me-1"></i> Process
                             </a>
