--- a/templates/base.html
+++ b/templates/base.html
@@ -113,7 +113,7 @@
                         </li>
                         {% endif %}
                     </ul>
-                    {% if is_privileged or 'Supervisor/Site Officer' in user_roles or 'Foreman/Duty Officer' in user_roles %}
+                    {% if is_privileged or 'Procurement' in user_roles or 'Supervisor/Site Officer' in user_roles or 'Foreman/Duty Officer' in user_roles %}
                  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                      <span>List</span>
                  </h6>
@@ -223,7 +223,7 @@
                         </li>
                         {% endif %}
                  </ul>
-                 {% if is_privileged or 'Supervisor/Site Officer' in user_roles or 'Foreman/Duty Officer' in user_roles %}
+                 {% if is_privileged or 'Procurement' in user_roles or 'Supervisor/Site Officer' in user_roles or 'Foreman/Duty Officer' in user_roles %}
                  <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
                      <span>List</span>
                  </h6>
